traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:8: error: not found: value diago
  if(y==0 && (diago+1)<getMondeLargeur()){setPos(diag+1,0);return diag+1}
              ^